--- a/styleIndex.css
+++ b/styleIndex.css
@@ -59,7 +59,7 @@ h1{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.85;
+    opacity: 0.50;
 }
 
 .overlay-text {
@@ -101,6 +101,7 @@ h1{
     overflow: hidden;
     border-radius: 10px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    
 }
 
 .card:hover {
@@ -120,7 +121,6 @@ h1{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.8);
     padding: 10px;
     border-radius: 5px;
     text-align: center;
@@ -131,7 +131,6 @@ h1{
 
 
 .card:hover .overlay-text {
-    background-color: rgba(0, 0, 0, 0.8);
     color: white;
     font-size: 3vw; /* Larger font size on hover */
 }
@@ -147,3 +146,16 @@ h1{
         margin-bottom: 10px; /* Reduce margin between cards on smaller screens */
     }
 }
+.card1{
+    background-color: #EF5523;
+}
+.card2{
+    background-color: #E62744;
+}
+.card3{
+    background-color: #FC903C;
+}
+.card4{
+    background-color: #F13AB1;
+}
+
